# ti-am62l-launch-ui

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.aarch64-unknown-linux-gnu  LICENSE  README.md  bb_code_server_stop.sh  benchmark_start.sh  build.rs  build_deploy_and_run_benchmark_on_target.sh  cpu_cores_disable.sh  cpu_cores_enable.sh
.devcontainer/: devcontainer.json
data/: itr-00_none.md  itr-00_none_run-00.csv  itr-00_none_run-00.html  itr-01_none.md  itr-01_none_run-00.csv  itr-01_none_run-00.html  itr-02_linuxkms-skia-software.csv  itr-02_linuxkms-skia-software.html  itr-02_linuxkms-software.csv  itr-02_linuxkms-software.html  itr-02_winit-software.csv  itr-02_winit-software.html  itr-03_linuxkms-skia-software.csv  itr-03_linuxkms-skia-software.html  itr-03_linuxkms-software.csv  itr-03_linuxkms-software.html  itr-03_winit-software.csv  itr-03_winit-software.html  itr-04_linuxkms-skia-software.csv  itr-04_linuxkms-skia-software.html  itr-04_linuxkms-software.csv  itr-04_linuxkms-software.html  itr-04_winit-software.csv  itr-04_winit-software.html  itr-05_linuxkms-skia-software.csv  itr-05_linuxkms-skia-software.html  itr-05_linuxkms-software.csv  itr-05_linuxkms-software.html  itr-05_winit-software.csv  itr-05_winit-software.html  itr-06_linuxkms-skia-software.csv  itr-06_linuxkms-skia-software.html  itr-06_linuxkms-software.csv  itr-06_linuxkms-software.html  itr-06_winit-software.csv  itr-06_winit-software.html  itr-07_linuxkms-skia-software.csv  itr-07_linuxkms-skia-software.html  itr-07_linuxkms-software.csv  itr-07_linuxkms-software.html  (+2 more)
src/: charger.rs  energy_monitor.rs  industrial.rs  main.rs  robo.rs
ui/: appwindow.slint
ui/components/app/: kd_button_round.slint  progress.slint  system_info.slint  system_info_tile.slint
ui/components/demos/energy_monitor/: energy-menu-page.slint  energy-menu.slint  energy-stats-tile.slint  energy-stats-value.slint  styling.slint
ui/components/demos/industrial/: button-25d.slint  section.slint  styling.slint
ui/components/kdab/: button-base.slint  button-segmented.slint  button-tick.slint  button.slint  drop-menu.slint  icon-button.slint  inline-button.slint  input.slint  radio-button.slint  scroll-view.slint  slider.slint  slint-text.slint  spinner.slint  styling.slint  switch.slint  tab-bar.slint
ui/pages/: charger_demo_page.slint  energy_monitor_page.slint  hw_info_page.slint  industrial_demo_page.slint  kdab_demo_page.slint  robo_demo_page.slint
ui/singletons/: demo_interface.slint  demo_loader.slint  style.slint
ui/widgets/: demo_button_round.slint  demo_menu.slint  demo_menu_button.slint  demo_view.slint  hw_info_widget.slint  kd_button.slint  kd_button_round.slint  kd_switch.slint  label.slint  system_info_tile.slint  text_view.slint
