[package]
name = "AM62L_Launch_UI"
version = "0.1.0"
authors = ["Marco Thaller"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.7"
sysinfo = "0.30.12"

[target.'cfg(target_arch = "aarch64")'.dependencies]
slint = { version = "1.7", features = ["backend-linuxkms-noseat", "renderer-skia"] }

[build-dependencies]
slint-build = "1.7"
