[package]
name = "AM62L_Launch_UI"
version = "0.1.0"
authors = ["Marco Thaller"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.38"
fontdue = "0.9.2"
geo = "0.29.2"
image = "0.25.5"
imageproc = "0.25.0"
once_cell = "1.15.0"
plotters = "0.3.7"
rand = "0.8.5"
rumqttc = "0.24.0"
rusttype = "0.9.3" # potentially unused
sysinfo = "0.32.0"
slint = "1.8.0"
#slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }

#[target.'cfg(target_arch = "aarch64")'.dependencies]
#slint = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440", default-features = false, features = ["renderer-software", "backend-winit", "compat-1-2"] } # recommended option by slint
#slint = { git = "https://github.com/slint-ui/slint.git", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }
#slint = { version = "1.8.0", features = ["backend-linuxkms-noseat", "renderer-skia"] }

[build-dependencies]
slint-build = "1.8.0"
#slint-build = { git = "https://github.com/slint-ui/slint.git" }
#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git" }
#slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }
#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" }

#[target.'cfg(target_arch = "aarch64")'.build-dependencies]
#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git" }
# enable signed distance fields for glyphs
#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440", features = ["embed-glyphs-as-sdf"] } # recommended option by slint
#i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", rev = "e3ea25f48ccba7c921a3b7fd88f1a17497623440" } # only for testing
