[package]
name = "AM62L_Launch_UI"
version = "0.1.0"
authors = ["Marco Thaller"]
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.38"
fontdue = "0.9.2"
geo = "0.29.2"
image = "0.25.5"
imageproc = "0.25.0"
once_cell = "1.15.0"
plotters = "0.3.7"
rand = "0.8.5"
rumqttc = "0.24.0"
rusttype = "0.9.3" # potentially unused
sysinfo = "0.32.0"
clap = { version = "4.5.16", features = ["derive"] }
serde_json = "1.0.138"
serde = "1.0.194"
slint = { version = "1.10", features = ["backend-linuxkms-noseat", "backend-winit", "renderer-skia"] }

[build-dependencies]
slint-build = "1.10"
